# appenv

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
include/appenv/: env.h  lib.h
lib/: CMakeLists.txt
lib/appenv/: CMakeLists.txt  env.cpp  lib.cpp
